--- a/Iot.html
+++ b/Iot.html
@@ -207,19 +207,18 @@
   </section>
 
    <!-- Book a demo section  -->
-  <section class="pt-0 r">
-    <div class="container ">
-      <div class="row justify-content-center text-center mb-5">
-        <div class="col-lg-8 col-md-12 ">
-          <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5 demo-container">
-          <h5 class="mb-0 me-4 ">Revolutionize your business with IoT magic</h5>
-          <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Request for Demo</h6>
-          </div>
-          </div>
-        </div>
+  <!-- Demo section -->
+  <div class="cta-wrapper">
+    <div class="cta-container">
+      <div class="cta-text demo-content-iot">
+        Want to revolutionize every aspect of your
+        business with the magic touch of IoT?
       </div>
+      <button class="cta-button">
+        <span>Get Started</span>
+      </button>
     </div>
-  </section>
+  </div>
 
 
    <!-- Use cases section for iot -->
