--- a/workflow.html
+++ b/workflow.html
@@ -479,11 +479,10 @@
         </section>
 
 
-
         <!-- Use cases section for iot -->
 
    <!-- Use cases section for iot -->
-<section class="pt-10">
+<section class="pt-10 usecase-section-workflow">
   <div class="container">
       <div class="row justify-content-center text-center mb-5">
           <div class="col-lg-8 col-md-12">
@@ -557,8 +556,9 @@
   </div>
 </section>
 
+
 <!-- Hidden extra items (initially hidden) -->
-<section id="extra-items" style="display: none; margin-top:-30px;">
+<section class= usecase-section-workflow id="extra-items" style="display: none; margin-top:-30px;">
   <div class="container">
       <div class="row">
           <!-- Additional 4 use case items (left content, right image) -->
@@ -652,7 +652,7 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-lg-8 col-md-12 d-flex align-items-center justify-content-between flex-wrap">
                         <div class="trynow-content">
-                            <h5 class="mb-3">
+                            <h5 class="mb-3 try-now-content">
                                 <span style="background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-secondary-color));
                                 -webkit-background-clip: text;
                                 -moz-background-clip: text;
@@ -678,9 +678,9 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
         </section>
 
   
-<section class="pb-0 about-section">
+<section class="pb-0 about-section ">
     <div class="container fullsection-lcpa">
-      <div class="row align-items-center">      
+      <div class="row align-items-center lcpa-section">      
         <div class="col-12 col-lg-6 mb-5 mb-lg-0  leftsection-work">
           <div class="row">
             <div class="col-md-6">
@@ -747,19 +747,16 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
 
 
   <!-- Demo section -->
-  <section class="pt-0 r">
-    <div class="container ">
-      <div class="row justify-content-center text-center mb-5">
-        <div class="col-lg-8 col-md-12 ">
-          <div class="d-md-flex align-items-center rounded-pill border border-primary p-3 ps-5 demo-container">
-          <h5 class="mb-0 me-4 ">READY TO AUTOMATE YOUR WORKFLOW? CONSULT WITH US FOR A SIMPLIFIED AND EFFICIENT PROCESS</h5>
-          <div class="rounded-pill bg-primary py-2 px-10 ms-auto"><h6 class="mb-0">Get Started</h6>
-          </div>
-          </div>
-        </div>
+  <div class="cta-wrapper">
+    <div class="cta-container">
+      <div class="cta-text">
+        READY TO AUTOMATE YOUR WORKFLOW? CONSULT WITH US FOR A SIMPLIFIED AND EFFICIENT PROCESS
       </div>
+      <button class="cta-button">
+        <span>Get Started</span>
+      </button>
     </div>
-  </section>
+  </div>
 
 
     <!-- Faq section -->
