--- a/workflow.html
+++ b/workflow.html
@@ -558,7 +558,7 @@
 
 
 <!-- Hidden extra items (initially hidden) -->
-<section class= usecase-section-workflow id="extra-items" style="display: none; margin-top:-30px;">
+<section class= usecase-section-workflow id="extra-items" style="display: none;">
   <div class="container">
       <div class="row">
           <!-- Additional 4 use case items (left content, right image) -->
@@ -684,7 +684,7 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
         <div class="col-12 col-lg-6 mb-5 mb-lg-0  leftsection-work">
           <div class="row">
             <div class="col-md-6">
-              <div class="featured-item style-1">
+              <div style="margin-bottom:40px;"class="featured-item style-1">
                 <div class="featured-icon">
                     <img src="images/Innomiant solutions/lcap-logo-1.png" alt="logo1" width="150" height="100">
                     <!-- <i aria-hidden="true" class="flaticon flaticon-rocket-launch"></i> -->
