"Updated links in dropdown menu from 'error-404.html' to specific page URLs."

--- a/header.html
+++ b/header.html
@@ -254,60 +254,39 @@
                     >
                       <ul class="dropdown-menu-sub">
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Enterprise Asset Management Software</a
-                          >
+                          <a class="dropdown-item" href="Enterprise-asset-management-software.html">Enterprise Asset Management Software</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Facility Management Software</a
-                          >
+                          <a class="dropdown-item" href="facility-maintenance-management-software.html">Facility Management Software</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Field Service Management software</a
-                          >
+                          <a class="dropdown-item" href="Field-service-management.html">Field Service Management Software</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Procurement Management</a
-                          >
+                          <a class="dropdown-item" href="procurement-management-software.html">Procurement Management</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Customer Relationship Management</a
-                          >
+                          <a class="dropdown-item" href="customer-relationship.html">Customer Relationship Management</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >IoT Solutions</a
-                          >
+                          <a class="dropdown-item" href="iot-development.html">IoT Solutions</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Visitor Management System Software</a
-                          >
+                          <a class="dropdown-item" href="innomaint.html">Visitor Management System Software</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Workflow Automation</a
-                          >
+                          <a class="dropdown-item" href="bautomate.html">Workflow Automation</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >OEE Monitoring</a
-                          >
+                          <a class="dropdown-item" href="oee-monitoring.html">OEE Monitoring</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Asset tracking with ble beacon</a
-                          >
+                          <a class="dropdown-item" href="asset-tracking-with-ble-beacon.html">Asset Tracking with BLE Beacon</a>
                         </li>
                         <li>
-                          <a class="dropdown-item" href="error-404.html"
-                            >Team Collaboration Solution</a
-                          >
+                          <a class="dropdown-item" href="team-collaboration-solution.html">Team Collaboration Solution</a>
                         </li>
+                        
                       </ul>
                      
                     </li>
