"Added 'd-none' class to 'primary-btn-anmIcon' anchor element"

--- a/header.html
+++ b/header.html
@@ -667,7 +667,7 @@
                 </div>-->
               </div>
               <div class="button-container-anmIcon">
-                <a class="primary-btn-anmIcon" href="#">
+                <a class="primary-btn-anmIcon d-none" href="#">
                   <span class="btn-text-anmIcon">Get a Proposal</span>
                   <img
                     class="btn-icon-anmIcon"
