nav bar issue fixed

--- a/header.html
+++ b/header.html
@@ -28,6 +28,14 @@
                 ></path>
               </svg>
             </button>
+            <style>
+              /* Apply margin-left adjustment only for desktop view */
+              @media (min-width: 1024px) {
+                #navbarNav {
+                  margin-left: -160px;
+                }
+              }
+            </style>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
