changes made in home page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <use xlink:href="#circlePath" fill="none"></use>
                     <text>
                       <textPath xlink:href="#circlePath">
-                        • SMI • MiddleEast • IT & Tech Solutions
+                        • SMI• MiddleEast • TechSolutions
                       </textPath>
                     </text>
                   </g>
@@ -200,12 +200,12 @@
                       alt=""
                     />
                     <a href="contact.html">
-                      <div class="primary-btn mt-3">
+                      <div class=" mt-3">
                         <input
                           class="subscribe-btn"
                           type="submit"
                           name="subscribe"
-                          value="Get Started"
+                          value="Learn More"
                         />
                       </div>
                     </a>
