--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 <!-- <br><br>
         <section class="pt-3 pb-0"> -->
 
-          <div class="container">
+          <!-- <div class="container">
             <div class="row justify-content-center text-center mb-5">
               <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
@@ -416,7 +416,7 @@
               </div>
             </div>
           </div>
-        </section> -->
+        </section> --> 
 
         <!--why choose us end-->
 
