--- a/innomaint.html
+++ b/innomaint.html
@@ -162,9 +162,12 @@
               <div class="row justify-content-center text-center">
                 <div class="col-xl-10 col-lg-12 col-12">
                   <h1 class="mb-4 mt-5">Innomaint</h1>
-                  <p class="mt-5">InnoMaint is a cloud-based FACILITY/SERVICE management software that Monitor, Measure and Manage
-                    all your maintenance/service activities associated with facility, equipment, service technicians and
-                    execution of the business from anywhere, at anytime through web and mobile application.</p>
+                  <p class="mt-5">
+                    Keep Your Facility Smart, Safe, and Secure with Innomaint CAFM Solution. Innomaint CAFM by SMI 
+                    Technology LLC revolutionizes facility management with a centralized platform to enhance 
+                    efficiency, safety, and compliance. Achieve a smart, secure facility while reducing costs 
+                    and downtime.
+                  </p>
                 </div>
               </div>
             </div>
