--- a/business-bautomate.html
+++ b/business-bautomate.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Title -->
-    <title>SMI-Electronic Data Interchange</title>
+    <title>SMI-Business Process Automation</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="images/smi-icon.png" />
@@ -66,7 +66,7 @@ Icon for services and Projects -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
 
-    <link href="css/business/contextual-bautomate.css" rel="stylesheet" type="text/css" />
+    <link href="css/bautomate-subpages.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -141,7 +141,7 @@ Icon for services and Projects -->
           <div class="row">
             <div class="col-12 col-lg-4">
               <div class="theme-title ">
-                <h6>What We Do</h6>
+                <h6>Benefits</h6>
                 <h2>What are the Business Process Automation
                      Benfits</h2>
               </div>
