--- a/robotic-bautomate.html
+++ b/robotic-bautomate.html
@@ -70,8 +70,15 @@
 
 <body>
 
+   <div >
+    <div id="ht-preloader">
+      <div class="loader clear-loader">
+        <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img">
+      </div>
+    </div>
    
     <div class="banner-business-container"
+    
         style="background-image: url('images/bautomate-main/robotic-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
         <div class="banner-business-content">
@@ -593,7 +600,7 @@
           </div>
         </div>
     </div>
-
+  </div>
 
 
     <!--== jquery -->
