--- a/business-bautomate.html
+++ b/business-bautomate.html
@@ -72,6 +72,12 @@ Icon for services and Projects -->
 
 <body>
 
+  
+  <!-- <div id="ht-preloader">
+    <div class="loader clear-loader">
+      <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img">
+    </div>
+  </div>  -->
     <div class="banner-business-container"
         style="background-image: url('images/bautomate-main/business-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
@@ -390,10 +396,12 @@ Icon for services and Projects -->
           </div>
         </div>
     </div>
+ 
 
 
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ <!--== jquery -->
 
 </html>
