Fixed mobile responsive issues in Bautomate ICM

--- a/intelligent-contract-management.html
+++ b/intelligent-contract-management.html
@@ -378,7 +378,7 @@ Icon for services and Projects -->
             </div>
     
             <!-- Right side image -->
-            <div class="col-md-6 image" style="display: flex; justify-content: center; align-items: center; padding-top: 2.5rem;">
+            <div class="key-features-image col-md-6 image" style="display: flex; justify-content: center; align-items: center; padding-top: 2.5rem;">
                 <img src="images/Bautomate/bautomate-intelligent-contract-management-features.webp" alt="Image description" class="img-fluid">
             </div>
         </div>
@@ -397,7 +397,6 @@ Icon for services and Projects -->
             
             <div class="row">
                 <input type="text" placeholder="Organization*">
-                <!-- <input type="text" placeholder="Accounts Payable*"> -->
                  <select name="" id="" aria-placeholder="Accounts Payable">
                     <option value="Accounts Payable">Accounts Payable</option>
                     <option value="Capital Expenditure Automation">Capital Expenditure Automation</option>
