"Removed FontAwesome down arrow content and shortened 'Software Testing & QA Services' to 'Software Testing & QA' in dropdown item."

--- a/header.html
+++ b/header.html
@@ -51,7 +51,7 @@
 }
 
 .navbar-nav .dropdown-item.dropdown-toggle::after {
-  content: '\f107'; /* FontAwesome down arrow */
+  
   font-family: FontAwesome;
   float: right;
 }
@@ -321,7 +321,7 @@
                     </li>
                     <li>
                       <a class="dropdown-item" href="error-404.html"
-                        >Software Testing & QA Services</a
+                        >Software Testing & QA</a
                       >
                     </li>
                     <li>
