--- a/business-bautomate.html
+++ b/business-bautomate.html
@@ -78,6 +78,10 @@ Icon for services and Projects -->
       <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img">
     </div>
   </div>  -->
+
+  <!-- header -->
+  <div id="header-placeholder"></div>
+  
     <div class="banner-business-container"
         style="background-image: url('images/bautomate-main/business-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
@@ -397,10 +401,28 @@ Icon for services and Projects -->
         </div>
     </div>
  
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      fetch('header.html')
+          .then(response => response.text())
+          .then(html => {
+              document.getElementById('header-placeholder').innerHTML = html;
+          })
+          .catch(error => console.error('Error loading the header:', error));
+  });
+</script>
 
-
-
+<!-- footer section -->
+<script>
+  fetch('footer.html')
+    .then(response => response.text())
+    .then(html => {
+      document.body.insertAdjacentHTML('beforeend', html);
+    })
+    .catch(error => console.error('Error loading the footer:', error));
+</script>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
  <!--== jquery -->
 
