--- a/robotic-bautomate.html
+++ b/robotic-bautomate.html
@@ -76,7 +76,10 @@
         <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img">
       </div>
     </div>
-   
+    
+    <!-- header -->
+    <div id="header-placeholder"></div>
+
     <div class="banner-business-container"
     
         style="background-image: url('images/bautomate-main/robotic-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
@@ -602,7 +605,27 @@
     </div>
   </div>
 
+  
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      fetch('header.html')
+          .then(response => response.text())
+          .then(html => {
+              document.getElementById('header-placeholder').innerHTML = html;
+          })
+          .catch(error => console.error('Error loading the header:', error));
+  });
+</script>
 
+<!-- footer section -->
+<script>
+  fetch('footer.html')
+    .then(response => response.text())
+    .then(html => {
+      document.body.insertAdjacentHTML('beforeend', html);
+    })
+    .catch(error => console.error('Error loading the footer:', error));
+</script>
     <!--== jquery -->
     <script src="js/jquery.min.js"></script>
 
