--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Title -->
-  <title>Smi-Get a Proposal</title>
+  <title>SMI - Get a Proposal</title>
 
   <!-- Favicon Icon -->
   <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
