made many file name related changes and deleted files

--- a/document-management-system.html
+++ b/document-management-system.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Title -->
-  <title>Smi-Document Management System</title>
+  <title>SMI - Document Management System</title>
 
   <!-- Favicon Icon -->
   <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
