--- a/interactive-asset-floor-plan.html
+++ b/interactive-asset-floor-plan.html
@@ -131,7 +131,7 @@ Icon for services and Projects -->
   }
 }
 
-
+</style>
 
 
 </head>
@@ -590,7 +590,6 @@ Icon for services and Projects -->
                     </div>
                   </div>
 
-/* 
          
           <div class="item">
             <div class="portfolio-item style-3">
