--- a/ivr-test-automation.html
+++ b/ivr-test-automation.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Title -->
-    <title>IVR Automation - Bautomate - SMI</title>
+    <title>IVR Automation - SMI</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="images/smi-icon.png" />
