Software Testing set justify alignment

--- a/software-testing.html
+++ b/software-testing.html
@@ -116,7 +116,7 @@ Icon for services and Projects -->
                 <div class="featured-title">
                     <h6 class="gradientText" style="margin-bottom: 1rem;">FUNCTIONAL TESTING</h6>
                 </div>
-                <p>
+                <p style="text-align: justify;">
                     Functional testing is widely used for increasing software quality. Functional testing analysis process includes 
                     various testing actions that measure the code of each component to assure quality.
                 </p>
@@ -130,7 +130,7 @@ Icon for services and Projects -->
                     <div class="featured-title">
                         <h6 class="gradientText" style="margin-bottom: 1rem;">PERFORMANCE TESTING</h6>
                     </div>
-                    <p>
+                    <p style="text-align: justify;">
                         SMI performance testing team will help you to find out the bottlenecks of software impacting the quality and nature so that your web/mobile application can withstand heavy loads.
                     </p>
                 </div>
@@ -156,7 +156,7 @@ Icon for services and Projects -->
                 <div class="featured-title">
                     <h6 class="gradientText" style="margin-bottom: 1rem;">PLATFORM COMPATIBILITY TESTING</h6>
                 </div>
-                <p>
+                <p style="text-align: justify;">
                     Technology improvements and niche platforms in web and mobile space have made a nightmare for software or app development teams. our testing team experts check the desired performance of the web/mobile application on each platform.
                 </p>
                 </div>
@@ -169,7 +169,7 @@ Icon for services and Projects -->
                     <div class="featured-title">
                         <h6 class="gradientText" style="margin-bottom: 1rem;">WEB/MOBILE APP TESTING</h6>
                     </div>
-                    <p>
+                    <p style="text-align: justify;">
                         The main difficulty with the web application is that it should be compatible with all browsers and operating systems (OS). Mobile app testing service is performed to maintain the performance of the app across different gadgets.
                     </p>
                 </div>
@@ -246,7 +246,7 @@ Icon for services and Projects -->
                 <div class="featured-title">
                     <h6 class="gradientText" style="margin-bottom: 1rem;">Affordable</h6>
                 </div>
-                <p>
+                <p style="text-align: justify;">
                     Pay only for testing as you would pay for any other service. Not for ongoing staffing costs and project delays.
                 </p>
                 </div>
@@ -259,7 +259,7 @@ Icon for services and Projects -->
                 <div class="featured-title">
                     <h6 class="gradientText" style="margin-bottom: 1rem;">Flexible</h6>
                 </div>
-                <p>
+                <p style="text-align: justify;">
                     Accommodating our methodology to reflect a project change and ensuring the testing is never road-blocked.
                 </p>
                 </div>
@@ -272,7 +272,7 @@ Icon for services and Projects -->
                 <div class="featured-title">
                     <h6 class="gradientText" style="margin-bottom: 1rem;">Expertise</h6>
                 </div>
-                <p>
+                <p style="text-align: justify;">
                     Our software testers have the experience, delegation, and practice from hundreds of applications they tested.
                 </p>
                 </div>
