vapt page done,freight main page done,changes are done

--- a/bautomate.html
+++ b/bautomate.html
@@ -217,58 +217,59 @@ Icon for services and Projects -->
             <section class="functional-abilities">
                 <div class="container">
                     <h2 class="title">Functional Abilities</h2>
-                    <p class="abilities-para" style="text-align: center;margin-bottom:10px;color:white;">Unleash the power of AI to free your
-                        team from routine
-                        tasks.</p>
-                    <div class="abilities-container">
-
-                        <!-- First Column (First 5 abilities with icons) -->
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-robot"></i></div>
-                            <p >GenAI</p>
+                    <p class="abilities-para">Unleash the power of AI to free your team from routine tasks.</p>
+                    <div class="abilities-columns">
+                        <!-- First Column -->
+                        <div class="abilities-column">
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-robot"></i></div>
+                                <p>GenAI</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-cogs"></i></div>
+                                <p>Function Specific AI BOT</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-user-circle"></i></div>
+                                <p>AI Copilot</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-plug"></i></div>
+                                <p>RPA BOTs</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-language"></i></div>
+                                <p>Native NLP BOTs</p>
+                            </div>
                         </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-cogs"></i></div>
-                            <p>Function Specific AI BOT</p>
+            
+                        <!-- Second Column -->
+                        <div class="abilities-column">
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-lock"></i></div>
+                                <p>Context Specific Private LLMs</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-sync"></i></div>
+                                <p>Continuous Context Learning</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-chart-line"></i></div>
+                                <p>Real-Time Analytics & Insights</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-file-alt"></i></div>
+                                <p>Cognitive Document Processing</p>
+                            </div>
+                            <div class="ability-item">
+                                <div class="icon-box"><i class="fa fa-tasks"></i></div>
+                                <p>Workflow Orchestration</p>
+                            </div>
                         </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-user-circle"></i></div>
-                            <p>AI Copilot</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-plug"></i></div>
-                            <p>RPA BOTs</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-language"></i></div>
-                            <p>Native NLP BOTs</p>
-                        </div>
-
-                        <!-- Second Column (Next 5 abilities with icons) -->
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-lock"></i></div>
-                            <p>Context Specific Private LLMs</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-sync"></i></div>
-                            <p>Continuous Context Learning</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-chart-line"></i></div>
-                            <p>Real Time Analytics & Insights</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-file-alt"></i></div>
-                            <p>Cognitive Document Processing</p>
-                        </div>
-                        <div class="ability-item">
-                            <div class="icon-box"><i class="fa fa-tasks"></i></div>
-                            <p>Workflow Orchestration</p>
-                        </div>
-
                     </div>
                 </div>
             </section>
+            
 
 
 
@@ -372,7 +373,6 @@ Icon for services and Projects -->
 <br><br>
 
             <section class="testimonial-section">
-
                 <h2 class="section-title" style="color:white;">Our <span>Testimonials</span></h2>
                 <div class="testimonial-container">
                     <!-- Left Testimonial Box -->
@@ -396,14 +396,14 @@ Icon for services and Projects -->
                             <img src="images/bautomate-main/testi-1.webp" alt="IT Infrastructure Engineer">
                             <div class="overlay">
                                 <p style="color:black;font-weight:bold;">01</p>
-                                <span style="color:white;font-weight:bold;">IT Infrastructure Engineer</span>
+                                <span style="color:white;font-weight:bold;line-height: 20px;">IT Infrastructure Engineer</span>
                             </div>
                         </div>
                         <div class="testimonial-item" data-index="2">
                             <img src="images/bautomate-main/testi-2.jpg" alt="Software Engineering Director">
                             <div class="overlay">
                                 <p style="color:black;font-weight:bold;">02</p>
-                                <span style="color:white;font-weight:bold;">Software Engineering Director</span>
+                                <span style="color:white;font-weight:bold;line-height: 20px;">Software Engineering Director</span>
                             </div>
                         </div>
                         <div class="testimonial-item" data-index="3">
@@ -417,7 +417,7 @@ Icon for services and Projects -->
                             <img src="images/bautomate-main/testi-4.png" alt="Asst Finance Controller">
                             <div class="overlay">
                                 <p style="color:black;font-weight:bold;">04</p>
-                                <span style="color:white;font-weight:bold;">Asst Finance Controller</span>
+                                <span style="color:white;font-weight:bold;line-height: 20px;">Asst Finance Controller</span>
                             </div>
                         </div>
                     </div>
