--- a/visitor-management-system-software.html
+++ b/visitor-management-system-software.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Title -->
-    <title>Smi-Get a Proposal</title>
+    <title>Smi-visitor-management-system-software</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
