--- a/workflow-automation.html
+++ b/workflow-automation.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Title -->
-    <title>Smi-Get a Proposal</title>
+    <title>Smi-workflow-automation</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
@@ -647,36 +647,19 @@ document.getElementById('loadLessBtn').addEventListener('click', function() {
 
 
         <!-- Book a demo section  -->
-        <section class="demo-section-whole">
-            <div class="container">
-                <div class="row justify-content-center text-center mb-5">
-                    <div class="col-lg-8 col-md-12 d-flex align-items-center justify-content-between flex-wrap">
-                        <div class="trynow-content">
-                            <h5 class="mb-3 try-now-content">
-                                <span style="background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-secondary-color));
-                                -webkit-background-clip: text;
-                                -moz-background-clip: text;
-                                color: transparent;">
-                                    Build applications swiftly
-                                </span> 
-                                and choose the best workflow in less time for best business outcomes and consistent results!
-                            </h5>
-                            
-                            <button class="siffiz-try">TRY NOW &gt;</button>
-                            <!-- <div class="icons">
-                                <img src="images/Innomiant solutions/workflow-gif1.gif" alt="Icon 1">
-                                <img src="images/Innomiant solutions/workflow-gif2.gif" alt="Icon 2">
-                                <img src="icon3.png" alt="Icon 3">
-                              </div> -->
-                        </div> 
-                        <div class="image-trynow">
-                            <img src="images/Innomiant solutions/workflow-button-img.png" alt="Business Team" />
-                        </div>
-                    </div>
-                </div>
+        <div class="workflow-swiffy">
+            <div class="swiffy-leftcontent">
+                <h2>
+                   <span class="highlight-text"> Build applications swiftly </span> and choose the best workflow
+                    in less time for best business outcomes and consistent results!
+                </h2>
+                <a href="#" class="cta-button-siffy">TRY NOW ></a>
             </div>
-        </section>
-
+            <div class="swiffy-containerimg">
+                <img src="images/Innomiant solutions/workflow-button-img.png" alt="People discussing using a tablet">
+            </div>
+        </div>
+        
   
 <section class="pb-0 about-section ">
     <div class="container fullsection-lcpa">
