Software Testing - fix latest projects scroll bug

--- a/software-testing.html
+++ b/software-testing.html
@@ -222,6 +222,7 @@ Icon for services and Projects -->
                 Latest projects <i class="las la-asterisk"></i> 
                 Software Testing <i class="las la-asterisk"></i>
                 Latest projects <i class="las la-asterisk"></i> 
+                Software Testing <i class="las la-asterisk"></i>
               </div>
             </div>
           </div>
