--- a/blockchain-development.html
+++ b/blockchain-development.html
@@ -77,7 +77,7 @@ Icon for services and Projects -->
     <div id="header-placeholder"></div>
 
     <section class="banner py-0">
-      <div class="banner-img" style="background-image: url('images/services_Images/SoftwareTesting/software-testing-banner.jpg');">
+      <div class="banner-img" style="background-image: url('images/services_Images/Blockchain/bc-banner.jpg');">
         <div class="banner-content">
           <div class="container">
             <div class="row justify-content-center text-center">
@@ -161,7 +161,7 @@ Icon for services and Projects -->
                 <div class="col-lg-4 col-md-6 mt-5">
                     <div class="featured-item style-4">
                         <div class="featured-icon">
-                          <i class="fi fi-tr-devices"></i>
+                          <i class="fi fi-tr-card-diamond"></i>
                             <span class="feature-number">04</span>
                         </div>
                         <div class="featured-desc">
